[metadata]
name = homeconnect_webthing
author = Gregor Roth
author_email = gregor.roth@web.de
description=Homeconnect WebThing adapter

[options]
packages = find:
python_requires = >=3.8
install_requires =
    sseclient-py>=1.7.2
    requests
    webthing>=0.15.0

[options.entry_points]
console_scripts =
    hc2 = homeconnect_webthing:main
